<resources>
    <string name="app_name">My Shopping</string>
    <string name="action_settings">Settings</string>

    <!-- add item labels-->
    <string name="item_name_label">Name</string>
    <string name="item_category_label">Category</string>
    <string name="item_observations_label">Observations</string>

    <string name="item_name_hint">Item name</string>
    <string name="item_category_hint">ex: Vegetables</string>
    <string name="item_observations_hint">Insert here extra notes</string>
    <string name="item_urgent_hint">Urgent</string>
    <string name="item_add_button">Add</string>

    <!-- Authentication fields-->
    <string name="register_username_hint">Email Address</string>
    <string name="register_password_hint">Password</string>
    <string name="register_conf_pwd_hint">Confirm Password</string>
    <string name="register_name">Name</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="register_failed">Your register failed, try again later...</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successfull">Welcome %1$s</string>
    <string name="logout">Logout</string>

    <!-- list admin fields -->
    <string name="list_create_button">Create</string>
    <string name="list_name_hint" >Home list</string>
    <string name="list_name_label">Name</string>
    <string name="list_group_label">Group</string>
    <string name="list_private_label">Private</string>

    <!-- list group fields -->
    <string name="add_group_name_hint">Group Name</string>


    <!-- activities name -->
    <string name="groups_activity">Groups</string>
    <string name="lists_activity">Lists</string>


</resources>
