<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    
    <EditText
        android:id="@+id/register_email"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/register_username_hint"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/register_name"/>

    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/register_conf_pwd"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/register_conf_pwd_hint"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/register_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Red"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>